donoratlas-testing-1/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <fullName>Contact</fullName>
    <label>Contact</label>
</CustomObject>