donoratlas-testing-1/force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>