donoratlas-testing-1/force-app/main/default/objects/Contact/fields/Donations__c.field-meta.xml
<CustomField>
    <fullName>Donations__c</fullName>
    <label>Donations</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>