donoratlas-testing-1/force-app/main/default/objects/Contact/fields/DonorAtlasEnhanced__c.field-meta.xml
<CustomField>
    <fullName>DonorAtlasEnhanced__c</fullName>
    <label>DonorAtlas Enhanced</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>