donoratlas-testing-1/force-app/main/default/objects/Contact/fields/NetWorthMax__c.field-meta.xml
<CustomField>
    <fullName>NetWorthMax__c</fullName>
    <label>Net Worth (Max)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>