donoratlas-testing-1/force-app/main/default/objects/Contact/fields/NetWorthMin__c.field-meta.xml
<CustomField>
    <fullName>NetWorthMin__c</fullName>
    <label>Net Worth (Min)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>