donoratlas-testing-1/force-app/main/default/objects/Contact/fields/PredictedAnnualGiving__c.field-meta.xml
<CustomField>
    <fullName>PredictedAnnualGiving__c</fullName>
    <label>Predicted Annual Giving</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>