donoratlas-testing-1/force-app/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Text</type>
    <length>100</length>
</CustomField>